[project]
name = "rand-gallery"
version = "0.1.0"
description = "Extremely simple FastAPI app that serves random images from a directory."
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["fastapi[standard]>=0.115.5"]

[dependency-groups]
dev = ["pyright>=1.1.389", "ruff>=0.8.0", "uv>=0.5.4"]
